--- a/styles.css
+++ b/styles.css
@@ -23,3 +23,32 @@ body {
   padding: 0 20px 20px 20px;
   border: 5px solid black;
 }
+h1 {
+  margin: 0;
+  padding: 20px 0;
+  color: #00539F;
+  text-shadow: 3px 3px 3px black;
+}
+img {
+  display: block;
+  margin: 0 auto;
+}
+.button {
+  /* Align buttons with the text fields */
+  padding-left: 90px; /* same size as the label elements */
+}
+
+button {
+  /* This extra margin represent roughly the same space as the space
+     between the labels and their text fields */
+  margin-left: .5em;
+}
+  ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+form li + li {
+  margin-top: 1em;
+}
